--- a/tailwindcss-coffee/src/index.html
+++ b/tailwindcss-coffee/src/index.html
@@ -4,24 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coffee</title>
+    <link rel="icon" href="" sizes="16x16" />
     <link href="../public/output.css" type="text/css" rel="stylesheet" />
+    <script src="../public/main.js" type="text/javascript" async></script>
   </head>
   <body>
     <div id="root">
       <div
-        class="content-wrapper max-w-screen-2xl text-base mx-auto px-8 bg-slate-200"
+        class="content-wrapper font-Karla max-w-screen-2xl text-base mx-auto px-8 bg-slate-200"
       >
-        <header class="py-6 mx-10">
-          <nav class="flex flex-grow justify-between items-center">
+        <header class="p-6 mx-auto">
+          <nav class="flex flex-grow justify-between items-center relative">
             <div
               class="logo basis-2/6 text-center text-xl font-semibold cursor-pointer"
             >
               CoffeeStyle
             </div>
             <ul
-              class="basis-3/6 flex items-center justify-end gap-8 uppercase text-sm text-gray-500 font-medium"
+              id="ct-top-menu"
+              class="basis-3/6 hidden lg:flex lg:items-center lg:justify-end lg:gap-7 uppercase text-sm text-gray-500 font-medium"
             >
-              <li class="top-menu-item">
+              <li class="top-menu-item top-menu-item-active">
                 <a href="#" class="">Home</a>
               </li>
               <li class="top-menu-item">
@@ -41,7 +44,7 @@
               </li>
             </ul>
             <ul
-              class="basis-1/6 flex justify-start items-center ml-16 uppercase text-sm text-gray-500 font-medium"
+              class="basis-3/6 lg:basis-1/6 flex justify-end lg:justify-start items-center ml-16 uppercase text-sm text-gray-500 font-medium"
             >
               <li class="top-menu-item">
                 <a href="#" class="">
@@ -64,6 +67,25 @@
                 </a>
               </li>
             </ul>
+            <div
+              class="lg:hidden basis-1/6 flex items-center cursor-pointer px-3 sm:px-8"
+            >
+              <svg
+                id="ct-top-menu-icon"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="w-6 h-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+                />
+              </svg>
+            </div>
           </nav>
         </header>
         <main>
