--- a/tailwindcss-coffee/src/index.html
+++ b/tailwindcss-coffee/src/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="root">
       <div
-        class="content-wrapper font-Karla max-w-screen-2xl text-base mx-auto px-8 bg-slate-200"
+        class="content-wrapper font-Karla max-w-screen-2xl text-base mx-auto px-8"
       >
         <header class="p-6 mx-auto">
           <nav class="flex flex-grow justify-between items-center relative">
@@ -89,7 +89,29 @@
           </nav>
         </header>
         <main>
-          <div class="slider">slider</div>
+          <div
+            class="slider h-[530px] bg-[url('../public/img/slider-bg.jpeg')] bg-cover bg-no-repeat bg-bottom"
+          >
+            <div
+              class="w-full h-full flex justify-center items-center bg-gray-900 bg-opacity-30"
+            >
+              <div class="mx-16 text-white text-center">
+                <div class="uppercase mb-6">best place to buy Coffee</div>
+                <div class="font-medium text-5xl mb-6">Coffee Mugs</div>
+                <div class="font-medium text-lg mb-8">
+                  The most versatile furniture system ever created. designed to
+                  fit your life, made to move and grow.
+                </div>
+                <div class="flex justify-center">
+                  <div
+                    class="uppercase bg-white text-gray-900 w-max tracking-wider py-4 px-6 text-xs font-semibold cursor-pointer hover:bg-opacity-95"
+                  >
+                    Explore Our Products
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- end slider -->
           <div class="story">story</div>
           <!-- end story -->
