--- a/tailwindcss-coffee/src/index.html
+++ b/tailwindcss-coffee/src/index.html
@@ -113,14 +113,58 @@
             </div>
           </div>
           <!-- end slider -->
-          <div class="story">story</div>
+          <div class="story">
+            <div class="w-full h-full flex justify-center items-center">
+              <div
+                class="px-4 sm:px-16 md:px-32 lg:px-64 xl:px-96 py-32 text-center"
+              >
+                <div class="text-[28px] mb-6 font-normal leading-9">
+                  What is your most special coffee?
+                </div>
+                <div class="text-gray-500 leading-7 mb-6">
+                  The French Press is a brewing method that comes closest to
+                  cupping. Cupping is the prescribed method by which coffee
+                  should be judged. Nothing separates the water from the coffee.
+                  To properly discover the flavours, it is best to drink the
+                  coffee this way. Everyone has their favourite brewing method.
+                </div>
+                <div>
+                  <a
+                    href="#"
+                    class="text-coffee-400 hover:text-coffee-600 relative hover:after:bg-coffee-200 after:absolute after:-bottom-2 after:left-0 after:bg-coffee-50 after:h-0.5 after:w-full after:transition-all after:ease-in-out after:duration-400"
+                    >Read the full Story</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- end story -->
+          <div class="ct-subheadline">
+            <div class="ct-subheadline-deco-line"></div>
+            <div class="ct-subheadline-label">featured Mugs</div>
+            <div class="ct-subheadline-deco-line"></div>
+          </div>
           <div class="featured-mugs">featured-mugs</div>
           <!-- end featured-mugs -->
+          <div class="ct-subheadline">
+            <div class="ct-subheadline-deco-line"></div>
+            <div class="ct-subheadline-label">more product</div>
+            <div class="ct-subheadline-deco-line"></div>
+          </div>
           <div class="more-products">more-products</div>
           <!-- end more-products -->
+          <div class="ct-subheadline">
+            <div class="ct-subheadline-deco-line"></div>
+            <div class="ct-subheadline-label">coffee-magazine</div>
+            <div class="ct-subheadline-deco-line"></div>
+          </div>
           <div class="coffee-magazine">coffee-magazine</div>
           <!-- end coffee-magazine -->
+          <div class="ct-subheadline">
+            <div class="ct-subheadline-deco-line"></div>
+            <div class="ct-subheadline-label">lifestyle-stories</div>
+            <div class="ct-subheadline-deco-line"></div>
+          </div>
           <div class="lifestyle-stories">lifestyle-stories</div>
           <!-- end  lifestyle-stories-->
           <div class="subscribe-us">subscribe-us</div>
